main.tf


provider "google" {
  project = "he-prod-itinfra-incubator"
  region  = "europe-west6"
}

resource "google_compute_network" "vpc_network" {
  name = "network-terraform"
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "subnet" {
  name          = "subnet-terraform"
  ip_cidr_range = "192.168.1.0/24"
  region  = "europe-west6"
  network       = google_compute_network.vpc_network.id
}

resource "google_compute_firewall" "egress_internet" {
  name    = "egress-terraform"
  network = google_compute_network.vpc_network.name
  priority = 900
  direction = "EGRESS"
  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }
  destination_ranges = ["0.0.0.0/0"]
}


resource "google_compute_firewall" "egress_deny" {
  name    = "denyout-terraform"
  network = google_compute_network.vpc_network.name
  priority = 1000
  direction = "EGRESS"
  deny {
    protocol = "all"
  }
  destination_ranges = ["0.0.0.0/0"]
}

resource "google_compute_firewall" "ingress_ssh" {
  name    = "ingress-terraform"
  network = google_compute_network.vpc_network.name
  priority = 901
  direction = "INGRESS"
  allow {
    protocol = "tcp"
    ports    = ["22", "3389"]
  }
  source_ranges = ["35.235.240.0/20"]
}

resource "google_compute_firewall" "ingress_deny" {
  name    = "denyin-terraform"
  network = google_compute_network.vpc_network.name
  priority = 1001
  direction = "INGRESS"
  deny {
    protocol = "all"
  }
  source_ranges = ["0.0.0.0/0"]
}

resource "google_compute_instance" "vm_instance" {
  name         = "vm-terraform"
  zone         = "europe-west6-c"
  depends_on   = [google_compute_subnetwork.subnet]
  machine_type = "e2-small"
  enable_display = true

  boot_disk {
    initialize_params {
      image = "projects/ubuntu-os-cloud/global/images/ubuntu-2504-plucky-amd64-v20250701"
      size  = 10
      type  = "pd-balanced"
      }
    }

    shielded_instance_config {
      enable_integrity_monitoring = true
      enable_secure_boot          = true
      enable_vtpm                 = true
  }

  network_interface {
    network    = google_compute_network.vpc_network.id
    subnetwork = google_compute_subnetwork.subnet.id
  }

  metadata_startup_script = <<-EOT
    #!/bin/bash
    echo "Startup script started at $(date)" > /var/log/startup-output.txt
    apt update
    apt upgrade -y
    echo "Startup script completed at $(date)" >> /var/log/startup-output.txt
  EOT
}

resource "google_compute_router" "router" {
  name    = "router-terraform"
  network = google_compute_network.vpc_network.name
  region  = "europe-west6"
}

resource "google_compute_router_nat" "nat" {
  name                               = "natgw-terraform"
  router                             = google_compute_router.router.name
  region                             = "europe-west6"
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
}
